添加  pod 'YYKit', '~> 1.0.9'

--- a/MX5BrowserOC/Podfile
+++ b/MX5BrowserOC/Podfile
@@ -9,6 +9,7 @@ target 'MX5BrowserOC' do
   pod 'Reachability', '~> 3.2'
   pod 'CocoaLumberjack', '~> 3.3.0'
   pod 'KYMenu'
+  pod 'YYKit', '~> 1.0.9'
 
   # Pods for MX5BrowserOC
 
